--- a/src/app/components/footer/footer.component.html
+++ b/src/app/components/footer/footer.component.html
@@ -1,5 +1,41 @@
-<div class="container-fluid">
+<footer class="container-fluid">
     <div class="row">
-        
+        <div class="col-12 col-sm-12 col-md-6 suscribe">
+            <form>
+                <h3>SUBSCRIBE Y AHORRA</h3>
+                <h4>Odiamos el SPAM tanto como tú. Te enviaremos cosas interesantes y promociones exlusivas</h4>
+                <div class="input-group">
+                    <input type="email" class="form-control" placeholder="Suscribete a nuestra lista de correo">
+                    <button>enviar</button>
+                </div>
+            </form>
+        </div>
     </div>
-</div>
+    <div class="row">
+        <div class="col-12 col-sm-12 col-md-6 ">
+            <ul class="footer-social">
+                <li><a href="https://www.facebook.com/boxsr.club"><i class="fab fa-facebook"></i></a></li>
+                <li><a href="https://www.instagram.com/boxsr.club/"><i class="fab fa-instagram"></i></a></li>
+                <li><a href="https://boxsr.es/pages/contacto"><i class="fab fa-youtube"></i></a></li>
+                <li><a href="https://www.pinterest.es/boxsrclub/"><i class="fab fa-pinterest"></i></a></li>
+            </ul>
+        </div>
+        <div class="col-12 col-sm-12 col-md-6 ">
+            <ul class="pages">
+                <li><a href="../../pages/aviso-legal">Aviso legal</a></li>
+                <li><a href="../../pages/contacto/contacto.component.html">Contáctanos</a></li>
+                <li><a href="../../pages/aviso-legal">Condiciones generales</a></li>
+                <li><a href="../../pages/aviso-legal">Envíos y devoluciones</a></li>
+                <li><a href="../../pages/aviso-legal">Pago seguro</a></li>
+                <li><a href="../../pages/aviso-legal">Preguntas frecuentes</a></li>
+            </ul>
+        </div>
+    </div>
+        <hr>
+        <div class="row derechos">
+
+            <p class="text-secondary">© 2020 BOXSR Todos los derechos reservados.</p>
+
+
+        </div>
+</footer>
