--- a/src/app/components/header/header.component.html
+++ b/src/app/components/header/header.component.html
@@ -19,16 +19,13 @@
                     <a class="nav-link" routerLink="/muestras">MUESTRAS</a>
                 </li>
                 <li class="nav-item dropdown ">
-                    <a class="nav-link dropdown-toogle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" data-hover="dropdown" aria-haspopup="true" aria-expanded="false" routerLink="/sobre-boxsr">SOBRE BOXSR</a>
+                    <a class="nav-link dropdown-toogle" href="#" id="navbarDropdown" data-toggle="dropdown" data-hover="dropdown" aria-haspopup="true" aria-expanded="false" routerLink="/sobre-boxsr">SOBRE BOXSR</a>
                     <div class="dropdown-menu" >
                         <a class="dropdown-item"   href="/conocenos">Conócenos</a>
                         <a class="dropdown-item"  href="/piel">La piel del hombre</a>
                         <a class="dropdown-item"  href="/ingredientes">Ingredientes activos</a>
                       </div>
-                </li>
-                
-                   
-                  
+                </li>        
             </ul>
         </div>
         <div class="left">
