--- a/src/app/components/header/header.component.scss
+++ b/src/app/components/header/header.component.scss
@@ -52,13 +52,14 @@ a {
     background: unset;
     border: unset;
     // display:none;
-    // :hover{
+    
+    // &:hover{
     //     display: block;
     // }
-   
-    
+  
 }
 .dropdown-item{
     background-color: unset;
     font-weight: 70;
+    
 }
