--- a/src/app/components/footer/footer.component.html
+++ b/src/app/components/footer/footer.component.html
@@ -5,14 +5,10 @@
                 <h3>SUBSCRIBE Y AHORRA</h3>
                 <h4>Odiamos el SPAM tanto como tú. Te enviaremos cosas interesantes y promociones exlusivas</h4>
                 <div class="input-group">
-                    <input type="email" class="form-control" placeholder="Suscribete a nuestra lista de correo">
-                    <button>enviar</button>
+                    <input type="email" class="form-control" >
+                    <button><i class="fas fa-envelope"></i></button>
                 </div>
             </form>
-        </div>
-    </div>
-    <div class="row">
-        <div class="col-12 col-sm-12 col-md-6 ">
             <ul class="footer-social">
                 <li><a href="https://www.facebook.com/boxsr.club"><i class="fab fa-facebook"></i></a></li>
                 <li><a href="https://www.instagram.com/boxsr.club/"><i class="fab fa-instagram"></i></a></li>
@@ -20,22 +16,24 @@
                 <li><a href="https://www.pinterest.es/boxsrclub/"><i class="fab fa-pinterest"></i></a></li>
             </ul>
         </div>
-        <div class="col-12 col-sm-12 col-md-6 ">
-            <ul class="pages">
-                <li><a href="../../pages/aviso-legal">Aviso legal</a></li>
-                <li><a href="../../pages/contacto/contacto.component.html">Contáctanos</a></li>
-                <li><a href="../../pages/aviso-legal">Condiciones generales</a></li>
-                <li><a href="../../pages/aviso-legal">Envíos y devoluciones</a></li>
-                <li><a href="../../pages/aviso-legal">Pago seguro</a></li>
-                <li><a href="../../pages/aviso-legal">Preguntas frecuentes</a></li>
+        <div class="col-12 col-sm-12 col-md-6 pages">
+            <ul class="li">
+                <li><a href="/aviso-legal">Aviso legal</a></li>
+                <li><a href="/contacto">Contáctanos</a></li>
+                <li><a href="/condiciones-generales">Condiciones generales</a></li>
+                <li><a href="/envios-devoluciones">Envíos y devoluciones</a></li>
+                <li><a href="/pago-seguro">Pago seguro</a></li>
+                <li><a href="/preguntas-frecuentes">Preguntas frecuentes</a></li>
             </ul>
         </div>
     </div>
-        <hr>
-        <div class="row derechos">
+
+    <hr>
+    <div class="row ">
+        <div class="col-12 derechos">
 
             <p class="text-secondary">© 2020 BOXSR Todos los derechos reservados.</p>
 
-
         </div>
+    </div>
 </footer>
