--- a/src/app/pages/sobre-boxsr/ingredientes/ingredientes.component.html
+++ b/src/app/pages/sobre-boxsr/ingredientes/ingredientes.component.html
@@ -25,7 +25,7 @@
           cicatrizantes, revitalizando la piel agredida y sensible
         </div>
        
-        <img class="desvanecer" src='../../../assets/images//aceite_.jpg' />
+        <img class="desvanecer" src='../../../../assets/images/Ingredientes activos 200x200_Mesa de trabajo 1 copia 7.png' />
         <h4>CALENDULA</h4>
       </div>
     </div>
@@ -36,7 +36,7 @@
           
           Tiene propiedades calmantes, reparadoras, antiinflamatorias y antimicrobianas. Es eficaz para calmar las irritaciones de las pieles sensibles y reactivas, aliviando y restaurando su confort.
         </div>
-        <img class="desvanecer" src='../../../assets/images//aceite_.jpg' />
+        <img class="desvanecer" src='../../../../assets/images/Ingredientes activos 200x200_Mesa de trabajo 1 copia 4.png' />
         <h4>ALPHA BISABOBOL</h4>
       </div>
     </div>
@@ -47,7 +47,7 @@
          
           Actúa como un verdadero agente nutritivo que proporciona elasticidad y consistencia a la piel, dejándola tersa y extremadamente suave. Tiene una función sebo reguladora ideal para pieles grasas o con tendencia acnéica.
         </div>
-        <img class="desvanecer" src='../../../assets/images//aceite_.jpg' />
+        <img class="desvanecer" src='../../../../assets/images/Ingredientes activos 200x200_Mesa de trabajo 1 copia 5.png' />
         <h4>AGUACATE</h4>
       </div>
     </div>
@@ -58,7 +58,7 @@
          
           Genera una acción antiinflamatoria, cicatrizante, bactericida y antimicótica. Te ayuda a luchar contra los radicales libres y regenera el tejido cutáneo.
         </div>
-        <img class="desvanecer" src='../../../assets/images//aceite_.jpg' />
+        <img class="desvanecer" src='../../../../assets/images/Ingredientes activos 200x200_Mesa de trabajo 1 copia 6.png' />
         <h4>ALOE VERA</h4>
       </div>
     </div>
@@ -74,7 +74,7 @@
           
           Posee propiedades antioxidantes protegiendo a tu piel de los radicales libres, contribuye a la producción de colágeno, ayuda a reducir los daños producidos en la exposición solar y favorece la eliminación de manchas.
         </div>
-        <img class="desvanecer" src='../../../assets/images//aceite_.jpg' />
+        <img class="desvanecer" src='../../../../assets/images/Ingredientes activos 200x200_Mesa de trabajo 1.png' />
         <h4>VITAMINA C</h4>
       </div>
     </div>
@@ -85,7 +85,7 @@
           
           Al activar la circulación facial ayuda a mejorar la elasticidad de tu piel, hidrata la epidermis y aumenta la renovación celular.
         </div>
-        <img class="desvanecer" src='../../../assets/images//aceite_.jpg' />
+        <img class="desvanecer" src='../../../../assets/images/Ingredientes activos 200x200_Mesa de trabajo 1 copia 8.png' />
         <h4>GINGKO</h4>
       </div>
     </div>
@@ -96,7 +96,7 @@
           
           Es un ingrediente imprescindible en la cosmética coreana por su capacidad para disimular las manchas, calmar las células cutáneas e igualar el tono de tu piel.
         </div>
-        <img class="desvanecer" src='../../../assets/images//aceite_.jpg' />
+        <img class="desvanecer" src='../../../../assets/images/Ingredientes activos 200x200_Mesa de trabajo 1 copia.png' />
         <h4>EXTRACTO DE REGALIZ</h4>
       </div>
     </div>
@@ -107,7 +107,7 @@
          
           Contribuye a combatir el envejecimiento por su acción frente a los radicales libres y te protege de la radicación UV  y de las agresiones oxidativas sobre tu piel.
         </div>
-        <img class="desvanecer" src='../../../assets/images//aceite_.jpg' />
+        <img class="desvanecer" src='../../../../assets/images/Ingredientes activos 200x200_Mesa de trabajo 1 copia 3.png' />
         <h4>VITAMINA E</h4>
       </div>
     </div>
@@ -123,7 +123,7 @@
             
             Tiene un efecto refrescante, protector, suavizante y antiinflamatorio sobre tu piel.
           </div>
-          <img class="desvanecer" src='../../../assets/images//aceite_.jpg' />
+          <img class="desvanecer" src='../../../../assets/images/Ingredientes activos 200x200_Mesa de trabajo 1 copia 2.png' />
           <h4>MIMOSA</h4>
         </div>
       </div>
@@ -143,103 +143,4 @@
   
       </div>
     </div>
-  <!-- 
-<div class="container-fluid">
-  <div class="row">
-  <div class="col-3">
-<div class="card" style="width: 18rem;">
-  <img class="card-img-top" src="..." alt="Card image cap">
-  <div class="card-body">
-    <h5 class="card-title">CALÉNDULA</h5>
-    <p class="card-text">Hacen que tu piel esté más tersa y suave, relaja las durezas y tiene propiedades antiinflamatorias y cicatrizantes, revitalizando la piel agredida y sensible.</p>
-  </div>
-</div>
-</div>
-<div class="col-3">
-<div class="card" style="width: 18rem;">
-  <img class="card-img-top" src="..." alt="Card image cap">
-  <div class="card-body">
-    <h5 class="card-title">ALPHA BISABOOL</h5>
-    <p class="card-text">Tiene propiedades calmantes, reparadoras, antiinflamatorias y antimicrobianas. Es eficaz para calmar las irritaciones de las pieles sensibles y reactivas, aliviando y restaurando su confort.</p>
-  </div>
-</div>
-</div>
-<div class="col-3">
-<div class="card" style="width: 18rem;">
-  <img class="card-img-top" src="..." alt="Card image cap">
-  <div class="card-body">
-    <h5 class="card-title">AGUACATE</h5>
-    <p class="card-text">
-      Actúa como un verdadero agente nutritivo que proporciona elasticidad y consistencia a la piel, dejándola tersa y extremadamente suave. Tiene una función sebo reguladora ideal para pieles grasas o con tendencia acnéica.</p>
-  </div>
-</div>
-</div>
-<div class="col-3">
-<div class="card" style="width: 18rem;">
-  <img class="card-img-top" src="..." alt="Card image cap">
-  <div class="card-body">
-    <h5 class="card-title">ALOE VERA</h5>
-    <p class="card-text">
-      Genera una acción antiinflamatoria, cicatrizante, bactericida y antimicótica. Te ayuda a luchar contra los radicales libres y regenera el tejido cutáneo. </p>
-  </div>
-</div>
-</div>
-</div>
-<div class="container-fluid">
-  <div class="row">
-  <div class="col-3">
-<div class="card" style="width: 18rem;">
-  <img class="card-img-top" src="..." alt="Card image cap">
-  <div class="card-body">
-    <h5 class="card-title">VITAMINA C</h5>
-    <p class="card-text"> Posee propiedades antioxidantes protegiendo a tu piel de los radicales libres, contribuye a la producción de colágeno, ayuda a reducir los daños producidos en la exposición solar y favorece la eliminación de manchas.</p>
-  </div>
-</div>
-</div>
-<div class="col-3">
-<div class="card" style="width: 18rem;">
-  <img class="card-img-top" src="..." alt="Card image cap">
-  <div class="card-body">
-    <h5 class="card-title">GINGKO</h5>
-    <p class="card-text">Al activar la circulación facial ayuda a mejorar la elasticidad de tu piel, hidrata la epidermis y aumenta la renovación celular.</p>
-  </div>
-</div>
-</div>
-<div class="col-3">
-<div class="card" style="width: 18rem;">
-  <img class="card-img-top" src="..." alt="Card image cap">
-  <div class="card-body">
-    <h5 class="card-title">AGUACATE</h5>
-    <p class="card-text">
-      Actúa como un verdadero agente nutritivo que proporciona elasticidad y consistencia a la piel, dejándola tersa y extremadamente suave. Tiene una función sebo reguladora ideal para pieles grasas o con tendencia acnéica.</p>
-  </div>
-</div>
-</div>
-<div class="col-3">
-<div class="card" style="width: 18rem;">
-  <img class="card-img-top" src="..." alt="Card image cap">
-  <div class="card-body">
-    <h5 class="card-title">ALOE VERA</h5>
-    <p class="card-text">
-      Genera una acción antiinflamatoria, cicatrizante, bactericida y antimicótica. Te ayuda a luchar contra los radicales libres y regenera el tejido cutáneo. </p>
-  </div>
-</div>
-</div>
-</div>
-<div class="card" style="width: 18rem;">
-  <img class="card-img-top" src="..." alt="Card image cap">
-  <div class="card-body">
-    <h5 class="card-title">VITAMINA C</h5>
-    <p class="card-text">
-     </p>
-  </div>
-</div>
-<div class="card" style="width: 18rem;">
-  <img class="card-img-top" src="..." alt="Card image cap">
-  <div class="card-body">
-    <h5 class="card-title">GINGKO</h5>
-    <p class="card-text">
-      </p>
-  </div>
-</div>
-</div> -->
+  
