--- a/src/app/pages/sobre-boxsr/piel/piel.component.scss
+++ b/src/app/pages/sobre-boxsr/piel/piel.component.scss
@@ -17,7 +17,7 @@
 .slider {
     height:33vh;
     margin-top: -70px;
-    background-image: url(../../../../assets/images/Product_photo_Fresh_natural.png);
+    background-image: url(../../../../assets/images/ojos.jpg);
     background-size: cover;
     background-position: center;
     display: flex;
