camabiado codigo de barras y mensajes de notificacion

--- a/src/app/admin/pages/productos/productos-list/productos-list.component.html
+++ b/src/app/admin/pages/productos/productos-list/productos-list.component.html
@@ -16,7 +16,7 @@
             <!-- ID Column -->
             <ng-container matColumnDef="id">
                 <th mat-header-cell *matHeaderCellDef mat-sort-header>Código de producto</th>
-                <td mat-cell *matCellDef="let row"> {{row.codigo_barras}} </td>
+                <td mat-cell *matCellDef="let row"> {{row.codigo_producto}} </td>
             </ng-container>
 
             <!-- nombre Column -->
