--- a/src/app/admin/pages/home-admin/modificar-admin/modificar-admin.component.html
+++ b/src/app/admin/pages/home-admin/modificar-admin/modificar-admin.component.html
@@ -23,7 +23,7 @@
         <mat-label>Email</mat-label>
         <input matInput formControlName="email" [ngClass]="{ 'is-invalid': submitted && f.email.errors }" />
       <div *ngIf="submitted && f.email.errors" class="invalid-feedback">
-          <div *ngIf="f.codigo.errors.required">Email requerido</div>
+          <div *ngIf="f.email.errors.required">Email requerido</div>
       </div>
       </mat-form-field>
     </div>
@@ -43,7 +43,7 @@
     <!-- <button  class="btn btn-primary">
         Crear
     </button> -->
-      <button mat-raised-button (click)="modificar(formularioAdmin.value)">Modificar</button>
+      <button mat-raised-button (click)="onSubmit()">Modificar</button>
     </div>
   </ng-template>
 
