--- a/src/app/admin/pages/productos/productos-list/productos-list.component.html
+++ b/src/app/admin/pages/productos/productos-list/productos-list.component.html
@@ -14,7 +14,7 @@
             </ng-container>
 
             <!-- ID Column -->
-            <ng-container matColumnDef="id">
+            <ng-container matColumnDef="codigo_producto">
                 <th mat-header-cell *matHeaderCellDef mat-sort-header>Código de producto</th>
                 <td mat-cell *matCellDef="let row"> {{row.codigo_producto}} </td>
             </ng-container>
