--- a/src/app/pages/producto/producto.component.html
+++ b/src/app/pages/producto/producto.component.html
@@ -1,1 +1,71 @@
-<p>producto works!</p>
+<div class="container-fluid product-container">
+    <div class="row product-container">
+        <div class="col-12 col-md-8 product-img">
+
+        </div>
+        <div class="col-12 col-md-4 product-text">
+            <h1>Aceite de Argan</h1>
+            <h3>
+                Lorem ipsum dolor sit, amet consectetur adipisicing elit.
+                Aspernatur distinctio ipsa suscipit amet a? Odit soluta,
+                vero eveniet aperiam sunt possimus necessitatibus totam cupiditate
+                commodi vitae! In tempore sit possimus modi explicabo,
+                voluptatem saepe fugiat impedit excepturi ut porro velit odit amet
+                animi quasi quaerat commodi ex, labore unde! Inventore consequatur vitae
+                modi assumenda quam molestiae consequuntur aperiam, quos autem dicta aliquid
+                expedita odio suscipit, corrupti deserunt quibusdam.
+            </h3>
+            <div class="container-fluid comprar-ahora">
+                <h2>Compra ahora <strong>15'95€</strong></h2>
+            </div>
+        </div>
+    </div>
+</div>
+
+<!--sirve-->
+<div class="container-fluid description">
+    <div class="row">
+        <div class="col-12 col-md-4 description-title">
+            <h1>¿Para que sirve?</h1>
+        </div>
+        <div class="col-12 col-md-8 description-text">
+            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Et ut velit iste nam? Asperiores in quisquam
+                obcaecati ex veritatis fugit aperiam soluta, cumque blanditiis fuga distinctio totam voluptatibus vitae
+                iste hic reiciendis dolorum a molestias eos necessitatibus culpa ea facere vero. Natus, ad aut cumque
+                veniam perferendis reiciendis, molestiae nobis ex corrupti doloremque odit sed quae accusamus non
+                officia laboriosam?</p>
+        </div>
+    </div>
+</div>
+
+<!--uso-->
+<div class="container-fluid description">
+    <div class="row">
+        <div class="col-12 col-md-4 description-title">
+            <h1>¿Como se usa?</h1>
+        </div>
+        <div class="col-12 col-md-8 description-text">
+            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Et ut velit iste nam? Asperiores in quisquam
+                obcaecati ex veritatis fugit aperiam soluta, cumque blanditiis fuga distinctio totam voluptatibus vitae
+                iste hic reiciendis dolorum a molestias eos necessitatibus culpa ea facere vero. Natus, ad aut cumque
+                veniam perferendis reiciendis, molestiae nobis ex corrupti doloremque odit sed quae accusamus non
+                officia laboriosam?</p>
+        </div>
+    </div>
+</div>
+
+<!--ingredientes-->
+<div class="container-fluid description">
+    <div class="row">
+        <div class="col-12 col-md-4 description-title">
+            <h1>INGREDIENTES</h1>
+        </div>
+        <div class="col-12 col-md-8 description-text">
+            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Et ut velit iste nam? Asperiores in quisquam
+                obcaecati ex veritatis fugit aperiam soluta, cumque blanditiis fuga distinctio totam voluptatibus vitae
+                iste hic reiciendis dolorum a molestias eos necessitatibus culpa ea facere vero. Natus, ad aut cumque
+                veniam perferendis reiciendis, molestiae nobis ex corrupti doloremque odit sed quae accusamus non
+                officia laboriosam?</p>
+        </div>
+    </div>
+</div>
