--- a/src/app/pages/shop/shop.component.html
+++ b/src/app/pages/shop/shop.component.html
@@ -23,7 +23,7 @@
     <div class="row">
 
         <div class="col-12 col-md-6 card-container">
-            <a href="">
+            <a href="/producto">
                 <div class="container-fluid card-img">
 
                 </div>
