--- a/src/app/admin/pages/productos/modificar-productos/modificar-productos.component.scss
+++ b/src/app/admin/pages/productos/modificar-productos/modificar-productos.component.scss
@@ -10,6 +10,92 @@
         }
       }
     }
+
+    .avatar-upload {
+      position: relative;
+      max-width: 205px;
+      margin: 10px auto 30px;
+
+      .avatar-edit {
+        position: absolute;
+        right: 19px;
+        z-index: 1;
+        top: 13px;
+
+        input{
+          display: none;
+        }
+
+        .custom-label {
+          display: inline-block;
+          width: 34px;
+          height: 34px;
+          margin-bottom: 0;
+          border-radius: 100%;
+          background: #3efc78;
+          border: 1px solid transparent;
+          box-shadow: 0px 2px 4px 0px rgba(0, 0, 0, 0.25);
+          cursor: pointer;
+          font-weight: normal;
+          transition: all 0.2s ease-in-out;
+        }
+
+        .upload-image {
+          background: #3efc78;
+        }
+
+        .remove-image {
+          background: #E91E63;
+        }
+
+        .custom-label:hover {
+          opacity: 1;
+        }
+
+        .custom-label:after {
+          position: absolute;
+          text-align: center;
+          margin: auto;
+          top: 8px;
+          right: 0;
+          left: 2px;
+          width: 18px;
+        }
+
+        .upload-image:after {
+          content: url('/assets/images/iconos/edit.svg');
+        }
+
+        .remove-image:after {
+          content: url('/assets/images/iconos/close.svg');
+          left: 0px !important;
+        }
+
+      }
+
+      .avatar-preview {
+        width: 200px;
+        height: 200px;
+        position: relative;
+        border-radius: 100%;
+        overflow: hidden;
+        border: 12px solid #fff;
+        -webkit-box-shadow: 0 0 45px rgba(0, 0, 0, .2);
+        -moz-box-shadow: 0 0 45px rgba(0, 0, 0, .2);
+        box-shadow: 0 0 45px rgba(0, 0, 0, .2);
+
+        &>div{
+          width: 100%;
+          height: 100%;
+          border-radius: 100%;
+          background-size: cover;
+          background-repeat: no-repeat;
+          background-position: center;
+        }
+      }
+    }
+
+
   }
 
   @media screen and (max-width: 40em) {
