--- a/src/app/components/login/login.component.html
+++ b/src/app/components/login/login.component.html
@@ -21,6 +21,12 @@
           </button>
       </div>
       <div class="form-group">
+        <button mat-raised-button color="primary">
+            <span *ngIf="loading" class="spinner-border spinner-border-sm mr-1"></span>
+            Registrar
+        </button>
+    </div>
+      <div class="form-group">
         <p *ngIf="error">
           Usuario o contraseña incorrecta
       </p>
