--- a/src/app/pages/shop/shop.component.html
+++ b/src/app/pages/shop/shop.component.html
@@ -21,82 +21,24 @@
 <div class="container-fluid cards-container">
     <!--row-->
     <div class="row">
-
-        <div class="col-12 col-md-6 card-container">
-            <a href="/producto">
-                <div class="container-fluid card-img">
-
-                </div>
-                <div class="container-fluid card-text">
-                    <h2>Anti Arrugas</h2>
-                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Maiores, odio quis illo qui cumque id
-                        eius
-                        assumenda sed nam vel.</p>
-                    <h3>50€</h3>
-                    <button class="arrow-button">SHOP NOW</button>
-                </div>
-            </a>
-        </div>
-
-        <div class="col-12 col-md-6 card-container">
-            <a href="">
-                <div class="container-fluid card-img">
-
-                </div>
-                <div class="container-fluid card-text">
-                    <h2>Anti Arrugas</h2>
-                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Maiores, odio quis illo qui cumque id
-                        eius
-                        assumenda sed nam vel.</p>
-                    <h3>50€</h3>
-                    <button class="arrow-button">SHOP NOW</button>
-                </div>
-            </a>
-        </div>
+        <ng-container *ngFor="let producto of productos">
+            <div class="col-12 col-md-6 card-container">
+                <a href="/producto">
+                    <div class="container-fluid card-img">
+                    </div>
+                    <div class="container-fluid card-text">
+                        <h2>{{ producto.nombre }}</h2>
+                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Maiores, odio quis illo qui cumque
+                            id
+                            eius
+                            assumenda sed nam vel.</p>
+                        <h3>{{ producto.precio }}€</h3>
+                        <button class="arrow-button">SHOP NOW</button>
+                    </div>
+                </a>
+            </div>
+        </ng-container>
     </div>
-
-    <!--row-->
-    <div class="row">
-
-        <div class="col-12 col-md-6 card-container">
-            <a href="">
-                <div class="container-fluid card-img">
-
-                </div>
-                <div class="container-fluid card-text">
-                    <h2>Anti Arrugas</h2>
-                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Maiores, odio quis illo qui cumque id
-                        eius
-                        assumenda sed nam vel.</p>
-                    <h3>50€</h3>
-                    <button class="arrow-button">SHOP NOW</button>
-                </div>
-            </a>
-        </div>
-
-        <div class="col-12 col-md-6 card-container">
-            <a href="">
-                <div class="container-fluid card-img">
-
-                </div>
-                <div class="container-fluid card-text">
-                    <h2>Anti Arrugas</h2>
-                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Maiores, odio quis illo qui cumque id
-                        eius
-                        assumenda sed nam vel.</p>
-                    <h3>50€</h3>
-                    <button class="arrow-button">SHOP NOW</button>
-                </div>
-            </a>
-        </div>
-    </div>
-
-
-
-
-
-
-</div>
 
 <!--REVIEWS COMPONENT-->
 <!--FOOTER COMPONENT-->
