Añadido boton de registrar

--- a/src/app/pages/perfil-usuario/perfil-usuario.component.html
+++ b/src/app/pages/perfil-usuario/perfil-usuario.component.html
@@ -34,14 +34,14 @@
         <div *ngIf="f.password.errors.required">Password requerido</div>
     </div>
     </mat-form-field>
+    <div class="form-group">
+      </div>
+      <div class="form-group">
+        <button mat-raised-button>Registrarme</button>
+          <!-- <button mat-raised-button (click)="guardar(formularioUsuario.value)">Crear</button> -->
+        </div>
   </div>
 </form>
 
-<ng-template pTemplate="footer">
-  <div class="form-group">
-  <!-- <button  class="btn btn-primary">
-      Crear
-  </button> -->
-    <button mat-raised-button (click)="guardar(formularioUsuario.value)">Crear</button>
-  </div>
-</ng-template>
+ 
+
