componente registro-usuario y formulario

--- a/src/app/pages/perfil-usuario/perfil-usuario.component.html
+++ b/src/app/pages/perfil-usuario/perfil-usuario.component.html
@@ -37,7 +37,7 @@
     <div class="form-group">
       </div>
       <div class="form-group">
-        <button mat-raised-button>Registrarme</button>
+        <button mat-raised-button>Modificar</button>
           <!-- <button mat-raised-button (click)="guardar(formularioUsuario.value)">Crear</button> -->
         </div>
   </div>
