--- a/src/app/pages/sobre-boxsr/ingredientes/ingredientes.component.html
+++ b/src/app/pages/sobre-boxsr/ingredientes/ingredientes.component.html
@@ -3,7 +3,7 @@
     <div class="col-12">
 
       <h1 class="black">El corazón de nuestra cosmética</h1>
-      <h3>Hemos selccionado los ingredientes de la mejor calidad combinando lo que nos ofrece la naturaleza
+      <h3>Hemos seleccionado los ingredientes de la mejor calidad combinando lo que nos ofrece la naturaleza
         con los últimos avances científicos gracias a nuestro laboratorio con 30 años de experiencia especializado en
         dermocosmética.
       </h3>
@@ -134,7 +134,7 @@
             
             Es ideal para el tratamiento de inflamaciones e irritaciones, sirve como descongestionante de la piel y detiene las hemorragias de pequeñas heridas.
           </div>
-          <img class="desvanecer" src='../../../assets/images//aceite_.jpg' />
+          <img class="desvanecer" src='../../../../assets/images/hamamelis_p.jpg' />
           <h4>HAMMAMELIS</h4>
         </div>
       </div>
