--- a/src/app/pages/registro-usuario/registro-usuario.component.html
+++ b/src/app/pages/registro-usuario/registro-usuario.component.html
@@ -2,46 +2,126 @@
   <div class="form-group">
     <mat-form-field class="full-width">
       <mat-label>Nombre</mat-label>
-      <input matInput formControlName="nombre" [ngClass]="{ 'is-invalid': submitted && f.nombre.errors }" />
+      <input
+        matInput
+        formControlName="nombre"
+        [ngClass]="{ 'is-invalid': submitted && f.nombre.errors }"
+      />
       <div *ngIf="submitted && f.nombre.errors" class="invalid-feedback">
-          <div *ngIf="f.nombre.errors.required">Nombre requerido</div>
+        <div *ngIf="f.nombre.errors.required">Nombre requerido</div>
       </div>
     </mat-form-field>
   </div>
   <div class="form-group">
     <mat-form-field class="full-width">
       <mat-label>Apellidos</mat-label>
-      <input matInput formControlName="apellidos" [ngClass]="{ 'is-invalid': submitted && f.apellidos.errors }" />
+      <input
+        matInput
+        formControlName="apellidos"
+        [ngClass]="{ 'is-invalid': submitted && f.apellidos.errors }"
+      />
       <div *ngIf="submitted && f.apellidos.errors" class="invalid-feedback">
-          <div *ngIf="f.apellidos.errors.required">Apellido obligatorio</div>
+        <div *ngIf="f.apellidos.errors.required">Apellido obligatorio</div>
       </div>
     </mat-form-field>
   </div>
+  <mat-form-field class="full-width">
+    <mat-label>Fecha de nacimiento</mat-label>
+    <input
+      matInput
+      formControlName="fecha_nacimiento"
+      [matDatepicker]="picker"
+    />
+    <mat-datepicker-toggle matSuffix [for]="picker"></mat-datepicker-toggle>
+    <mat-datepicker
+      #picker
+      startView="year"
+      [startAt]="startDate"
+    ></mat-datepicker>
+  </mat-form-field>
   <div class="form-group">
     <mat-form-field class="full-width">
       <mat-label>Email</mat-label>
-      <input matInput formControlName="email" [ngClass]="{ 'is-invalid': submitted && f.email.errors }" />
-    <div *ngIf="submitted && f.email.errors" class="invalid-feedback">
+      <input
+        matInput
+        formControlName="email"
+        [ngClass]="{ 'is-invalid': submitted && f.email.errors }"
+      />
+      <div *ngIf="submitted && f.email.errors" class="invalid-feedback">
         <div *ngIf="f.email.errors.required">Email requerido</div>
-    </div>
+      </div>
     </mat-form-field>
   </div>
   <div class="form-group">
     <mat-form-field class="full-width">
-      <mat-label>Password</mat-label>
-      <input matInput digitOnly formControlName="password" [ngClass]="{ 'is-invalid': submitted && f.password.errors }" />
+      <mat-label>Direccion</mat-label>
+      <input
+        matInput
+        formControlName="direccion"
+        [ngClass]="{ 'is-invalid': submitted && f.direccion.errors }"
+      />
+      <div *ngIf="submitted && f.direccion.errors" class="invalid-feedback">
+        <div *ngIf="f.direccion.errors.required">Direccion obligatoria</div>
+      </div>
+    </mat-form-field>
+  </div>
+  <div class="form-group">  
+    <mat-form-field class="reduce-with">
+      <mat-label>Población</mat-label>
+      <input
+        matInput
+        formControlName="poblacion"
+        [ngClass]="{ 'is-invalid': submitted && f.direccion.errors }"
+      />
+      <div *ngIf="submitted && f.direccion.errors" class="invalid-feedback">
+        <div *ngIf="f.poblacion.errors.required">Poblacion obligatoria</div>
+      </div>
+    </mat-form-field>
+    <mat-form-field class="reduce-with">
+      <mat-label>Código Postal</mat-label>
+      <input
+        matInput
+        formControlName="codigo_postal"
+        [ngClass]="{ 'is-invalid': submitted && f.direccion.errors }"
+      />
+      <div *ngIf="submitted && f.direccion.errors" class="invalid-feedback">
+        <div *ngIf="f.codigo_postal.errors.required">Codigo postal</div>
+      </div>
+    </mat-form-field>
+  </div>
+  <div class="form-group">
+    <mat-form-field class="full-width">
+      <mat-label>Introduce tu password</mat-label>
+      <input
+        matInput
+        formControlName="password"
+        [type]="hide ? 'password' : 'text'"
+      />
+      <button
+        mat-icon-button
+        matSuffix
+        (click)="hide = !hide"
+        [attr.aria-label]="'Hide password'"
+        [attr.aria-pressed]="hide"
+      >
+        <mat-icon>{{ hide ? "visibility_off" : "visibility" }}</mat-icon>
+      </button>
+      <input
+        matInput
+        digitOnly
+        formControlName="password"
+        [ngClass]="{ 'is-invalid': submitted && f.password.errors }"
+      />
       <div *ngIf="submitted && f.password.errors" class="invalid-feedback">
         <div *ngIf="f.password.errors.required">Password requerido</div>
-    </div>
-    </mat-form-field>
-    <div class="form-group">
       </div>
-      <div class="form-group">
-        <button mat-raised-button>Registrarme</button>
-          <!-- <button mat-raised-button (click)="guardar(formularioUsuario.value)">Crear</button> -->
-        </div>
+    </mat-form-field>
+    <div class="form-group"></div>
+    <div class="form-group">
+      <button mat-raised-button (click)="guardar(formularioUsuario.value)">
+        Registrarme
+      </button>
+      <!-- <button mat-raised-button (click)="guardar(formularioUsuario.value)">Crear</button> -->
+    </div>
   </div>
 </form>
-
- 
-
