--- a/src/app/pages/registro-usuario/registro-usuario.component.scss
+++ b/src/app/pages/registro-usuario/registro-usuario.component.scss
@@ -27,8 +27,16 @@
     }
   
     .container {
+      display: flex;
+      flex-direction: column;
         .full-width{
-          width: 80%;
+          justify-content: center;
+          align-items: center;
+          
+          width: 50%;
+        }
+        .reduce-with{
+          margin-right: 185px;
         }
       }
   }
