--- a/src/app/pages/registro-usuario/registro-usuario.component.scss
+++ b/src/app/pages/registro-usuario/registro-usuario.component.scss
@@ -36,7 +36,8 @@
           width: 50%;
         }
         .reduce-with{
-          margin-right: 185px;
+          margin-right: 50px;
+          width: 23%;
         }
       }
   }
