--- a/src/app/admin/pages/inventario/inventario.component.html
+++ b/src/app/admin/pages/inventario/inventario.component.html
@@ -1,2 +1,5 @@
 <app-header-admin></app-header-admin>
-<p>inventario works!</p>
+<app-inventario-list  (modificar)="modificarInventario($event)"></app-inventario-list>
+
+
+<app-modificar-inventario [display]="mostrarModificarInventario" [producto]="inventarioModificar" (cerrarDialogo)="onOcultarModificarInventario()" *ngIf="mostrarModificarInventario"></app-modificar-inventario>
