--- a/src/app/pages/shop/shop.component.html
+++ b/src/app/pages/shop/shop.component.html
@@ -1,44 +1,1 @@
-<!-- slider -->
-<div class="container-fluid slider">
-    <div class="row slider-text">
-        <div class="col-12">
-            <h1>Tenemos lo que tu piel necesita</h1>
-        </div>
-    </div>
-</div>
-
-<!--filtro-->
-<div class="container-fluid">
-    <div class="row">
-        <div class="col-12 filtro">
-
-        </div>
-
-    </div>
-</div>
-
-<!-- shop starts -->
-<div class="container-fluid cards-container">
-    <!--row-->
-    <div class="row">
-        <ng-container *ngFor="let producto of productos">
-            <div class="col-12 col-md-6 card-container">
-                <a href="/producto">
-                    <div class="container-fluid card-img">
-                    </div>
-                    <div class="container-fluid card-text">
-                        <h2>{{ producto.nombre }}</h2>
-                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Maiores, odio quis illo qui cumque
-                            id
-                            eius
-                            assumenda sed nam vel.</p>
-                        <h3>{{ producto.precio }}€</h3>
-                        <button class="arrow-button">SHOP NOW</button>
-                    </div>
-                </a>
-            </div>
-        </ng-container>
-    </div>
-
-<!--REVIEWS COMPONENT-->
-<!--FOOTER COMPONENT-->
+<app-shop-list [productos]="productos" (ver)="verProducto($event)"></app-shop-list>
