--- a/src/app/pages/shop/producto/producto.component.html
+++ b/src/app/pages/shop/producto/producto.component.html
@@ -3,7 +3,7 @@
         <div class="col-12 col-md-8 product-img">
 
         </div>
-        <div [style.backgroundImage]="'url('+ producto?.imagen_url +')'"
+        <div
         class="col-12 col-md-4 product-text">
             <h1>{{ producto?.nombre }}</h1>
             <h3>
