lista en shop ok

--- a/src/app/pages/shop/producto/producto.component.html
+++ b/src/app/pages/shop/producto/producto.component.html
@@ -1,6 +1,6 @@
 <div class="container-fluid product-container">
     <div class="row product-container">
-        <div class="col-12 col-md-8 product-img">
+        <div class="col-12 col-md-8 product-img" [ngStyle]="{'background-image':'url(' + producto?.imagen_url + ')'}">
 
         </div>
         <div
