navigate+product-img

--- a/src/app/pages/shop/producto/producto.component.scss
+++ b/src/app/pages/shop/producto/producto.component.scss
@@ -16,6 +16,9 @@
     padding: 0px;
     min-height: 80vh;
     border-left: gray 1px solid;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
 
 
     h1, h3 {
