--- a/src/app/pages/contacto/contacto.component.html
+++ b/src/app/pages/contacto/contacto.component.html
@@ -7,7 +7,7 @@
 	</div>
 </div>
 
-<div class="container-fluid contact">
+<!-- <div class="container-fluid contact">
 	<div class="row">
 		<div class="col-md-9">
 			<div class="contact-form">
@@ -37,7 +37,7 @@
 			</div>
 		</div>
 	</div>
-</div>
+</div> -->
 
 <form [formGroup]="formContact" class="container">
 	<div class="form-group">
