--- a/src/app/pages/shop/shop-list/shop-list.component.html
+++ b/src/app/pages/shop/shop-list/shop-list.component.html
@@ -28,10 +28,7 @@
                     </div>
                     <div class="container-fluid card-text">
                         <h2>{{ producto.nombre }}</h2>
-                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Maiores, odio quis illo qui cumque
-                            id
-                            eius
-                            assumenda sed nam vel.</p>
+                        <p>{{ producto.descripcion_resumen }}</p>
                         <h3>{{ producto.precio }}€</h3>
                         <button class="arrow-button">SHOP NOW</button>
                     </div>
