page hablan de nosotros

--- a/src/app/components/header/header.component.html
+++ b/src/app/components/header/header.component.html
@@ -24,6 +24,7 @@
                         <a class="dropdown-item"   href="/conocenos">Conócenos</a>
                         <a class="dropdown-item"  href="/piel">La piel del hombre</a>
                         <a class="dropdown-item"  href="/ingredientes">Ingredientes activos</a>
+                        <a class="dropdown-item"  href="/hablan-de-nosotros">Hablan de nosotros</a>
                       </div>
                 </li>        
             </ul>
