--- a/src/app/components/header/header.component.scss
+++ b/src/app/components/header/header.component.scss
@@ -42,7 +42,7 @@ a {
   top: 1.4rem;
 
    a {
-     color: black;
+     color: rgba(199, 198, 198, 0.445);
      padding : 0.6rem;
      margin-right: 0px;
    }
