--- a/src/app/components/footer/footer.component.html
+++ b/src/app/components/footer/footer.component.html
@@ -5,7 +5,7 @@
                 <h3>SUBSCRIBE Y AHORRA</h3>
                 <h4>Odiamos el SPAM tanto como tú. Te enviaremos cosas interesantes y promociones exlusivas</h4>
                 <div class="input-group">
-                    <input type="email" class="form-control" >
+                    <input type="email" >
                     <button><i class="fas fa-envelope"></i></button>
                 </div>
             </form>
